[workspace]
members = ["viewer"]

[package]
name = "boop"
version = "0.1.0"
edition = "2021"

[profile.release]
lto = true
codegen-units = 1
strip = true

[features]
bin = ["dep:anyhow", "dep:clap", "dep:image"]

[dependencies]
# Depedencies required by the decoder
bytes = "1.9.0"
thiserror = "2.0.6"
zstd = "0.13.2"

# Depedencies for the cli
anyhow = { version = "1.0.94", optional = true }
clap = { version = "4.5.23", features = [
    "derive",
    "cargo",
    "env",
    "unicode",
    "wrap_help",
], optional = true }
image = { version = "0.25.5", optional = true }
