[workspace]
members = ["viewer"]

[package]
name = "boop"
version = "0.1.0"
edition = "2024"

[profile.release]
lto = true
codegen-units = 1
strip = true

[features]
bin = ["dep:anyhow", "dep:clap", "dep:image", "image/default"]
image = ["dep:image"]

[dependencies]
# Depedencies required by the decoder
bytes = "1.10.1"
thiserror = "2.0.12"
zstd = "0.13.3"

# Depedencies for the cli
anyhow = { version = "1.0.98", optional = true }
clap = { version = "4.5.41", features = [
    "derive",
    "cargo",
    "env",
    "unicode",
    "wrap_help",
], optional = true }
image = { version = "0.25.6", default-features = false, optional = true }
