[package]
name = "boop-viewer"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.94"
boop = { version = "0.1.0", path = ".." }
clap = { version = "4.5.23", features = [
    "derive",
    "cargo",
    "env",
    "unicode",
    "wrap_help",
] }
eframe = { version = "0.29.1", features = ["wayland", "wgpu", "x11"], default-features = false }
egui = { version = "0.29.1", default-features = false }
image = { version = "0.25.5", default-features = false }
