[package]
name = "boop-viewer"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
boop = { version = "0.1.0", path = "..", features = ["image"] }
clap = { version = "4.5.31", features = [
    "derive",
    "cargo",
    "env",
    "unicode",
    "wrap_help",
] }
eframe = "0.32.0"
egui = "0.32.0"
image = { version = "0.25.6", default-features = false }
